# cudashot2jpeg

./: CMakeLists.txt  test_shot2jpeg_2.cpp  test_shot2jpeg_3.cpp
shot2jpeg/: CMakeLists.txt  shot2jpeg.cu  shot2jpeg.h
